--- a/style.css
+++ b/style.css
@@ -276,3 +276,54 @@ input[type="radio"]:checked ~ input[type="radio"]:checked ~ input[type="radio"]:
   background-color: #262934;
   cursor: pointer;
 }
+
+footer{
+  background-color: #333;
+  width: 100%;
+  height: 4rem;
+ 
+}
+
+
+
+
+@media (max-width: 450px) {
+  footer{
+    position: absolute;
+    bottom:0;
+  }
+}
+
+.footer-c{
+  padding: 1.5rem;
+  color:#fff;
+}
+
+.footer-c a{
+  color: #fff;
+}
+
+.footer-c a:hover{
+  color:blue;
+}
+
+.span-1{
+  color: red;
+}
+
+.span-2{
+  color: black;
+}
+
+.span-3{
+  color: blue;
+}
+
+header{
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+
+header hr{
+  width: 50%;
+}
